docker/config/envoy/illa-unit-ingress.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
  - name: "envoy.resource_monitors.fixed_heap"
    typed_config:
      "@type": type.googleapis.com/envoy.config.resource_monitor.fixed_heap.v2alpha.FixedHeapConfig
      # TODO: Tune for your system.
      max_heap_size_bytes: 1073741824 # 1 GiB
  actions:
  - name: "envoy.overload_actions.shrink_heap"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.95
  - name: "envoy.overload_actions.stop_accepting_requests"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.98

static_resources:
  listeners:
  - name: illa_unit_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: illa_unit_self_host
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: local_route
            virtual_hosts:
            - name: illa_builder
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/builder/"
                route:
                  prefix_rewrite: "/"
                  cluster: illa_builder_backend_unit
              - match: 
                  prefix: "/resource/"
                route:
                  prefix_rewrite: "/"
                  cluster: illa_resource_backend_unit
              - match: 
                  prefix: "/builder-ws/"
                route:
                  prefix_rewrite: "/"
                  cluster: illa_builder_backend_ws_unit
                  timeout: 0s 
              - match: 
                  prefix: "/supervisor/"
                route:
                  prefix_rewrite: "/"
                  cluster: illa_supervisor_backend_unit
              - match: 
                  prefix: "/object-storage/"
                route:
                  prefix_rewrite: "/"
                  host_rewrite_literal: "127.0.0.1:9000"
                  cluster: illa_object_storage_unit
              - match: 
                  prefix: "/"
                route:
                  cluster: illa_builder_frontend_unit    
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: illa_builder_frontend_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_builder_frontend_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000
  - name: illa_builder_backend_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_builder_backend_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8001
  - name: illa_resource_backend_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_resource_backend_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8001
  - name: illa_builder_backend_ws_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_builder_backend_ws_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8002
  - name: illa_supervisor_backend_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_supervisor_backend_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8003
  - name: illa_object_storage_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_object_storage_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9000
  - name: illa_supervisor_backend_internal_unit
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 10s
    load_assignment:
      cluster_name: illa_supervisor_backend_internal_unit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9001
